feat: add java-app and update scripts